--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </a>
                     <a class="item d-flex align-items-center gap-14">
                         <i class="fa-solid fa-location-dot"></i>
-                        <p class="text">Dương Lâm, Văn Quán, Hà Đông, Hà Nội</p>
+                        <p class="text">Quang Hanh, Cẩm Phả, Quảng Ninh.</p>
                     </a>
                 </div> 
                 <div class="box-info" data-aos="fade-up" data-aos-duration="1600">
